// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Custom|Method for rendering Vue JSX 1`] = `
<button
  class="button"
  style="color: rgb(66, 185, 131); border-color: #42b983;"
>
  MyButton rendered with JSX!
</button>
`;

exports[`Storyshots Custom|Method for rendering Vue pre-registered component 1`] = `
<p>
  <em>
    This component was pre-registered in .storybook/config.js
  </em>
  <br />
   
  <button
    class="button"
    style="color: rgb(66, 185, 131); border-color: #42b983;"
  >
    MyButton rendered in a template!
  </button>
</p>
`;

exports[`Storyshots Custom|Method for rendering Vue render + component 1`] = `
<button
  class="button"
  style="color: pink; border-color: pink;"
>
  renders component: MyButton!
</button>
`;

exports[`Storyshots Custom|Method for rendering Vue render 1`] = `
<div>
  renders a div with some text in it..
</div>
`;

exports[`Storyshots Custom|Method for rendering Vue template + component 1`] = `
<button
  class="button"
  style="color: rgb(66, 185, 131); border-color: #42b983;"
>
  MyButton rendered in a template!
</button>
`;

exports[`Storyshots Custom|Method for rendering Vue template + methods 1`] = `
<p>
  <em>
    Clicking the button will navigate to another story using the 'addon-links'
  </em>
  <br />
   
  <button
    class="button rounded"
    style="color: rgb(66, 185, 131); border-color: #42b983;"
  >
    MyButton rendered in a template + props & methods!
  </button>
</p>
`;

exports[`Storyshots Custom|Method for rendering Vue template 1`] = `
<div>
  <h1>
    A template
  </h1>
   
  <p>
    rendered in vue in storybook
  </p>
</div>
`;

exports[`Storyshots Custom|Method for rendering Vue vuex + actions 1`] = `
<button
  class="button"
  style="color: rgb(66, 185, 131); border-color: #42b983;"
>
  with vuex: 0!
</button>
`;

exports[`Storyshots Custom|Method for rendering Vue whatever you want 1`] = `
<button
  class="button"
  style="color: rgb(66, 185, 131); border-color: #42b983;"
>
  with awesomeness: 0!
</button>
`;
